<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ibra.moodle.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleString"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:typeface="sans"
        android:textSize="100sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentString"
            android:checked="false"
            android:id="@+id/studentButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherString"
            android:checked="false"
            android:id="@+id/teacherButton" />

    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEdit"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/usernameString" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEdit"
        android:layout_gravity="center_horizontal"
        android:hint="@string/passwordString" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginString"
        android:id="@+id/loginBtn"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgotString"
        android:id="@+id/forgotText"
        android:layout_gravity="center_horizontal"
        android:linksClickable="false"
        android:clickable="true" />
</LinearLayout>
