<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ibra.moodle.Teacher">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subFoldersString"
        android:id="@+id/teacherSubjectFoldersBtn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventsString"
        android:id="@+id/eventsBtn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutString"
        android:id="@+id/teacherLogoutBtn"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
